[gd_scene load_steps=45 format=3 uid="uid://qt3s68hj2mka"]

[ext_resource type="Script" path="res://scene/scripts/CombatScene3.gd" id="1_jwon1"]
[ext_resource type="Resource" uid="uid://p5pkvw56g0wj" path="res://script/EnemyNormal.tres" id="2_nu1qb"]
[ext_resource type="Resource" uid="uid://cpknapa1oyjdu" path="res://script/EnemyCommander.tres" id="3_0gbib"]
[ext_resource type="Texture2D" uid="uid://cq3wnjcbytobe" path="res://Player/Enemy.png" id="3_a1pp8"]
[ext_resource type="Texture2D" uid="uid://br28oq7odyull" path="res://Player/Pejuang.png" id="4_bk6ur"]
[ext_resource type="Texture2D" uid="uid://1k4tu1wc6hsi" path="res://Player/E_Com.png" id="4_rudj5"]
[ext_resource type="FontFile" uid="uid://bujp5kop5trrh" path="res://Player/ADRIP1.TTF" id="5_evpoa"]
[ext_resource type="Texture2D" uid="uid://cbj64r3nojk43" path="res://World/Road.png" id="6_0bun5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ba5ah"]
bg_color = Color(0.791346, 0, 0.120508, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_51q04"]
bg_color = Color(0.133485, 0.686829, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
border_blend = true

[sub_resource type="AtlasTexture" id="AtlasTexture_ftikn"]
atlas = ExtResource("4_bk6ur")
region = Rect2(0, 154, 77, 77)

[sub_resource type="AtlasTexture" id="AtlasTexture_byt26"]
atlas = ExtResource("4_bk6ur")
region = Rect2(77, 154, 77, 77)

[sub_resource type="AtlasTexture" id="AtlasTexture_3llfa"]
atlas = ExtResource("4_bk6ur")
region = Rect2(154, 154, 77, 77)

[sub_resource type="AtlasTexture" id="AtlasTexture_70cxn"]
atlas = ExtResource("4_bk6ur")
region = Rect2(231, 154, 77, 77)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ctkp"]
atlas = ExtResource("4_bk6ur")
region = Rect2(308, 154, 77, 77)

[sub_resource type="AtlasTexture" id="AtlasTexture_s1b18"]
atlas = ExtResource("4_bk6ur")
region = Rect2(385, 154, 77, 77)

[sub_resource type="AtlasTexture" id="AtlasTexture_d0u4v"]
atlas = ExtResource("4_bk6ur")
region = Rect2(462, 154, 77, 77)

[sub_resource type="AtlasTexture" id="AtlasTexture_s2txv"]
atlas = ExtResource("4_bk6ur")
region = Rect2(539, 154, 77, 77)

[sub_resource type="SpriteFrames" id="SpriteFrames_6p2ms"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ftikn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_byt26")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3llfa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_70cxn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ctkp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s1b18")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d0u4v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s2txv")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_5dewg"]
atlas = ExtResource("3_a1pp8")
region = Rect2(539, 77, 77, 77)

[sub_resource type="AtlasTexture" id="AtlasTexture_6gfha"]
atlas = ExtResource("3_a1pp8")
region = Rect2(462, 77, 77, 77)

[sub_resource type="AtlasTexture" id="AtlasTexture_dosik"]
atlas = ExtResource("3_a1pp8")
region = Rect2(385, 77, 77, 77)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ur71"]
atlas = ExtResource("3_a1pp8")
region = Rect2(308, 77, 77, 77)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ce8w"]
atlas = ExtResource("3_a1pp8")
region = Rect2(231, 77, 77, 77)

[sub_resource type="AtlasTexture" id="AtlasTexture_fgf38"]
atlas = ExtResource("3_a1pp8")
region = Rect2(154, 77, 77, 77)

[sub_resource type="AtlasTexture" id="AtlasTexture_5k2wm"]
atlas = ExtResource("3_a1pp8")
region = Rect2(77, 77, 77, 77)

[sub_resource type="AtlasTexture" id="AtlasTexture_x0032"]
atlas = ExtResource("3_a1pp8")
region = Rect2(0, 77, 77, 77)

[sub_resource type="SpriteFrames" id="SpriteFrames_8lu7o"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5dewg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6gfha")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dosik")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ur71")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ce8w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fgf38")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5k2wm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x0032")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_7ykh5"]
atlas = ExtResource("4_rudj5")
region = Rect2(539, 77, 77, 77)

[sub_resource type="AtlasTexture" id="AtlasTexture_6tvln"]
atlas = ExtResource("4_rudj5")
region = Rect2(462, 77, 77, 77)

[sub_resource type="AtlasTexture" id="AtlasTexture_pa2fs"]
atlas = ExtResource("4_rudj5")
region = Rect2(385, 77, 77, 77)

[sub_resource type="AtlasTexture" id="AtlasTexture_fy6xq"]
atlas = ExtResource("4_rudj5")
region = Rect2(308, 77, 77, 77)

[sub_resource type="AtlasTexture" id="AtlasTexture_d8gim"]
atlas = ExtResource("4_rudj5")
region = Rect2(231, 77, 77, 77)

[sub_resource type="AtlasTexture" id="AtlasTexture_schvm"]
atlas = ExtResource("4_rudj5")
region = Rect2(154, 77, 77, 77)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ha7q"]
atlas = ExtResource("4_rudj5")
region = Rect2(77, 77, 77, 77)

[sub_resource type="AtlasTexture" id="AtlasTexture_28y0q"]
atlas = ExtResource("4_rudj5")
region = Rect2(0, 77, 77, 77)

[sub_resource type="SpriteFrames" id="SpriteFrames_pgy5r"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ykh5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6tvln")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pa2fs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fy6xq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d8gim")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_schvm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ha7q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_28y0q")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cmvqe"]
bg_color = Color(0.0768358, 0.0768358, 0.0768358, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 4
border_width_bottom = 3

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jvgt0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pm5un"]
bg_color = Color(0.0768358, 0.0768358, 0.0768358, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6t67g"]
draw_center = false

[sub_resource type="Animation" id="Animation_a63rh"]
length = 0.001

[sub_resource type="Animation" id="Animation_khyba"]
resource_name = "glow"
loop_mode = 1

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1vx5f"]
_data = {
"RESET": SubResource("Animation_a63rh"),
"glow": SubResource("Animation_khyba")
}

[node name="CombatScene3" type="Node"]
script = ExtResource("1_jwon1")
enemy = ExtResource("2_nu1qb")
enemyCommander = ExtResource("3_0gbib")

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(209, 298)
scale = Vector2(1.5, 1.5)

[node name="ProgressBar" type="ProgressBar" parent="Player"]
offset_left = -52.0
offset_top = 17.3333
offset_right = 48.0
offset_bottom = 27.3333
theme_override_styles/background = SubResource("StyleBoxFlat_ba5ah")
theme_override_styles/fill = SubResource("StyleBoxFlat_51q04")
value = 50.0
show_percentage = false

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Player"]
sprite_frames = SubResource("SpriteFrames_6p2ms")
frame_progress = 0.567397

[node name="Enemy" type="CharacterBody2D" parent="."]
position = Vector2(960, 304)
scale = Vector2(1.5, 1.5)

[node name="ProgressBar" type="ProgressBar" parent="Enemy"]
offset_left = -53.3333
offset_top = 57.3333
offset_right = 46.6667
offset_bottom = 67.3333
theme_override_styles/background = SubResource("StyleBoxFlat_ba5ah")
theme_override_styles/fill = SubResource("StyleBoxFlat_51q04")
value = 50.0

[node name="Enemy1" type="Button" parent="Enemy"]
modulate = Color(1, 1, 1, 0.00392157)
offset_left = -28.0
offset_top = -37.0
offset_right = 17.0
offset_bottom = 46.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Enemy"]
position = Vector2(-7.41666, 8.75001)
scale = Vector2(1.19264, 1.22727)
sprite_frames = SubResource("SpriteFrames_8lu7o")
animation = &"idle"
frame_progress = 0.364778

[node name="Enemy2" type="CharacterBody2D" parent="."]
position = Vector2(958, 134)
scale = Vector2(1.5, 1.5)

[node name="ProgressBar" type="ProgressBar" parent="Enemy2"]
offset_left = -58.0
offset_top = 56.6667
offset_right = 42.0
offset_bottom = 66.6667
theme_override_styles/background = SubResource("StyleBoxFlat_ba5ah")
theme_override_styles/fill = SubResource("StyleBoxFlat_51q04")
value = 50.0

[node name="Enemy2" type="Button" parent="Enemy2"]
modulate = Color(1, 1, 1, 0.00392157)
offset_left = -28.0
offset_top = -37.0
offset_right = 17.0
offset_bottom = 46.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Enemy2"]
sprite_frames = SubResource("SpriteFrames_pgy5r")
animation = &"idle"
frame_progress = 0.690689

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -101.0
offset_right = -788.0
grow_horizontal = 2
grow_vertical = 0

[node name="Attack" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("5_evpoa")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_cmvqe")
theme_override_styles/focus = SubResource("StyleBoxEmpty_jvgt0")
text = "Attack
"

[node name="Defend" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("5_evpoa")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_cmvqe")
theme_override_styles/focus = SubResource("StyleBoxEmpty_jvgt0")
text = "Defend"

[node name="Run" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("5_evpoa")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_cmvqe")
theme_override_styles/focus = SubResource("StyleBoxEmpty_jvgt0")
text = "Run"

[node name="TextBoxPanel" type="Panel" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 366.0
offset_top = -146.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_pm5un")

[node name="Text" type="Label" parent="TextBoxPanel"]
layout_mode = 2
offset_left = 20.0
offset_top = 19.0
offset_right = 782.0
offset_bottom = 130.0
theme_override_fonts/font = ExtResource("5_evpoa")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_6t67g")
text = "AWiawjiawjijwaiwakidiwaiawkdiwkaidwaidjwaijdksajdiwajdkas"
autowrap_mode = 3
text_direction = 1

[node name="Road" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(794, 212)
scale = Vector2(1.28125, 1.28125)
texture = ExtResource("6_0bun5")
metadata/_edit_lock_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1vx5f")
}

[connection signal="pressed" from="Enemy/Enemy1" to="." method="_on_enemy_1_pressed"]
[connection signal="pressed" from="Enemy2/Enemy2" to="." method="_on_enemy_2_pressed"]
[connection signal="pressed" from="VBoxContainer/Attack" to="." method="_on_attack_pressed"]
